--- a/Notas/app/src/main/res/layout/activity_cadastra_login.xml
+++ b/Notas/app/src/main/res/layout/activity_cadastra_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.schin.notas.activitys.CadastraLoginActivity">
+    tools:context="com.schin.notas.activities.CadastraLoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
