--- a/Notas/app/src/main/res/layout/activity_splash.xml
+++ b/Notas/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    tools:context="com.schin.notas.activitys.SplashActivity">
+    tools:context="com.schin.notas.activities.SplashActivity">
 
     <ImageView
         android:layout_width="wrap_content"
